syntax = "proto3";

package dd;

option go_package = "dd";

service DD {
  // User/Auth
  rpc Auth (AuthRequest) returns (AuthResponse);
  rpc Me(Blank) returns (User);
  rpc GetUser (GetByIdRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);

  // Campaigns
  rpc GetCampaign (GetByIdRequest) returns (Campaign);
  rpc GetCampaigns (GetCampaignsRequest) returns (GetCampaignsResponse);
  rpc CreateCampaign (CreateCampaignRequest) returns (CreateCampaignResponse);
  rpc EditCampaign (EditCampaignRequest) returns (CampaignCore);

  // Quests
  rpc GetQuest (GetByIdRequest) returns (Quest);
  rpc GetQuests (GetQuestsRequest) returns (GetQuestsResponse);
  rpc CreateQuest(CreateQuestRequest) returns (CreateQuestResponse);
  rpc EditQuest(EditQuestRequest) returns (Quest);
}

// COMMON
message GetByIdRequest {
  string id = 1;
}

message SearchParams {
  repeated string ids = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}

message Blank { }

// AUTH
message AuthRequest {
  string token = 1;
}

message AuthResponse {
  User user = 1;
  bool reigstrationRequired = 2;
}

message CreateUserRequest {
  string token = 1;
  string username = 2;
}


// *************************************
//              CAMPAIGNS
// *************************************
message GetCampaignsRequest {
  SearchParams search = 1;
}

message GetCampaignsResponse {
  repeated CampaignCore campaigns = 1;
  uint32 total = 2;
}

message CreateCampaignRequest { }

message CreateCampaignResponse {
  string id = 1;
}

message EditCampaignRequest {
  CampaignCore campaign = 1;
  string id = 2;
}


// *************************************
//                QUESTS
// *************************************

message GetQuestsRequest {
  SearchParams search = 1;
}

message GetQuestsResponse {
  repeated Quest quests = 1;
  uint32 total = 2;
}

message CreateQuestRequest { }

message CreateQuestResponse {
  string id = 1;
}

message EditQuestRequest {
  string id = 1;
  Quest quest = 2;
}

// *************************************
//                MODELS
// *************************************

message Quest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message User {
  string id = 1;
  string name = 2;
  string imageURL = 3;
  uint64 createdAt = 4;
}

message CampaignCore {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageId = 4;

  repeated int64 experienceTable = 10;
}

message Campaign {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageId = 4;
  repeated int64 experienceTable = 10;
  repeated CampaignUser users = 11;
  repeated Item items = 12;
  repeated EntityPreset entityPresets = 13;
  repeated Entity entities = 14;
}

message Entity {
  string id = 1;
  string name = 2;
  string description = 3;
  User user = 4;
  string imageId = 5;
  repeated Attribute attributes = 6;
  int64 xp = 7;
  Inventory inventory = 8;
  Health health = 9;
  EntityPreset preset = 10;
}

message EntityPreset {
  string id = 1;
  string name = 2;
  string description = 3;
  User user = 4;
  string imageId = 5;
  repeated EntityAttribute attributes = 6;
  Inventory inventory = 7;
  HealthPreset health = 8;
  bool playerCreatable = 9;
}

message EntityAttribute {
  string name = 1;
  string description = 2;
  string imageId = 3;
  string defaultValue = 4;
  int32 type = 5;
  repeated string options = 6;
  int32 class = 7;
  bool required = 8;
  int64 max = 9;
  int64 min = 10;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageId = 4;
  repeated Attribute attributes = 5;
}

message Inventory {
  repeated InventoryItem items = 1;
}

message InventoryItem {
  Item item = 1;
  int64 quantity = 2;
}

message Attribute {
  string name = 1;
  int32 type = 2;
  string data = 3;
}

message CampaignUser {
  User user = 1;
  bool isAdmin = 2;
}

message HealthPreset {
  int32 mode = 1;
  int64 max = 2;
}

message Health {
  int32 mode = 1;

  message Normal {
    int64 max = 1;
    int64 current = 2;
    int64 temp = 3;
  }

  Normal normal = 2;

  message MultiBar {
    repeated int64 bars = 1;
    int64 current = 2;
  }

  MultiBar multiBar = 3;
}